# attractor-visual-builder

./: .gitignore  README.md  pyproject.toml  sandbox-spec.md
attractor/agent/: __init__.py  config.py  events.py  loop_detection.py  prompts.py  session.py  subagent.py  truncation.py
attractor/llm/: __init__.py  catalog.py  client.py  errors.py  generate.py  models.py  retry.py  streaming.py  tools.py
attractor/mcp/: __init__.py  bridge.py  client.py
attractor/pipeline/: __init__.py  artifacts.py  checkpoint.py  conditions.py  context.py  edge_selection.py  engine.py  events.py  fidelity.py  graph.py  interviewer.py  outcome.py  parser.py  server.py  stylesheet.py  transforms.py  validator.py
attractor/server/: __init__.py  __main__.py  app.py  dot_generator.py  models.py  pipeline_manager.py  scheduler.py  sse.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  constants.js  dotGenerator.js  presets.js
tests/: conftest.py
tests/agent/: test_apply_patch.py  test_events.py  test_execution_env.py  test_loop_detection.py  test_profiles.py  test_session.py  test_subagent.py  test_tools_core.py  test_truncation.py
tests/integration/: test_agent_smoke.py  test_llm_smoke.py  test_pipeline_smoke.py
tests/llm/: test_catalog.py  test_client.py  test_errors.py  test_generate.py  test_models.py  test_retry.py  test_streaming.py  test_tools.py
tests/pipeline/: test_artifacts.py  test_checkpoint.py  test_conditions.py  test_context.py  test_edge_selection.py  test_engine.py  test_fidelity.py  test_graph.py  (+7 more)
(+41 files in other folders)
