[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attractor"
version = "0.1.0"
description = "DOT-based pipeline runner for multi-stage AI workflows"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "starlette>=0.45",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "pytest-cov>=6.0",
    "httpx",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires real API keys (slow)",
    "openai: requires OPENAI_API_KEY",
    "anthropic: requires ANTHROPIC_API_KEY",
    "gemini: requires GEMINI_API_KEY",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
